argocd/argocd-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.${DOMAIN}`)
      priority: 10
      middlewares:
        - name: vpn-ipwhitelist
          namespace: default
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.${DOMAIN}`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      middlewares:
        - name: vpn-ipwhitelist
          namespace: default
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-tls
    domains:
      - main: argocd.${DOMAIN}
